<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolsTabLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/border"
        android:padding="12dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/tools_tab_ruler" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/tools_tab_distance" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="12dp"
            android:text="@string/float_zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_add_box"
            android:padding="8dp"
            android:text="@string/tools_tab_add" />


        <Button
            android:id="@+id/buttonClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_clear"
            android:padding="8dp"
            android:text="@string/tools_tab_clean" />

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/elevationProfile"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:background="#FFFFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/border"
        android:layout_marginVertical="16dp"
        android:padding="12dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/tools_tab_map_downloader" />

    <Button
        android:id="@+id/downloadTilesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/tools_tab_download"
        android:drawableStart="@drawable/ic_cloud_download"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/downloadElevationsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:ems="5"
            android:text="@string/zero_out_of_zero" />

        <ProgressBar
            android:id="@+id/downloadElevationsProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="8dp" />
    </LinearLayout>


</LinearLayout>
