<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/border_with_solid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="64dp">

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_zoom_levels"
            android:padding="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/from" />

                <NumberPicker
                    android:id="@+id/startZoomLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:focusable="false"
                    android:width="100dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/to" />

                <NumberPicker
                    android:id="@+id/finishZoomLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:focusable="false"
                    android:width="100dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@android:string/cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@android:string/ok"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>